# OpenAllegroParser

./: .gitattributes  CMakeLists.txt  README.md  findUnknownParameterSet.py  find_parameter_set.py  pad_to_pxml.py  vcpkg.json
.github/workflows/: main.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
doc/: pad.md
lib/: CMakeLists.txt
lib/include/: DataStream.hpp  Drillmethod.hpp  Exception.hpp  Figure.hpp  General.hpp  HoleType.hpp  LayerStuff.hpp  Pad.hpp  PadFile.hpp  PadstackUsage.hpp  Parser.hpp  Symbol.hpp  Units.hpp  XmlGenerator.hpp
lib/src/: DataStream.cpp  LayerStuff.cpp  Pad.cpp  Parser.cpp  XmlGenerator.cpp
src/: DataStream.cpp  DataStream.hpp  Figure.hpp  General.hpp  HoleType.hpp  LayerStuff.cpp  LayerStuff.hpp  Pad.cpp  Pad.hpp  PadFile.hpp  PadstackUsage.hpp  Parser.cpp  Parser.hpp  main.cpp
test/: CMakeLists.txt  vcpkg.json
test/src/: unit_tests.cpp
test/test_cases/: 0000.pad  0000.pxml  0001.pad  0001.pxml  0002.pad  0002.pxml  0003.pad  0004.pad  0005.pad  0006.pad  0007.pad  0007.pxml  0008.pad  0008.pxml  0009.pad  0009.pxml  0010.pad  0011.pad  0012.pad  0012.pxml  0013.pad  0014.pad  0015.pad  0015.pxml  0016.pad  0017.pad  0018.pad  0019.pad  0020.pad  0021.pad  0022.pad  0023.pad  0024.pad  0024.pxml  0025.pad  0026.pad  0027.pad  0028.pad  0029.pad  0030.pad  (+37 more)
unit_test/: CMakeLists.txt  vcpkg.json
unit_test/src/: unit_tests.cpp
unit_test/test_cases/: 0002.pad  0003.pxml  0004.pxml  0005.pxml  0006.pxml  0010.pxml  0011.pad  0011.pxml  0012.pad  0013.pxml  0014.pad  0014.pxml  0016.pxml  0017.pxml  0018.pxml  0019.pad  0019.pxml  0020.pad  0020.pxml  0021.pxml  0022.pad  0022.pxml  0023.pxml  0025.pad  0025.pxml  0026.pxml  0027.pxml  0028.pxml  0029.pxml  0030.pad  0030.pxml  0031.pad  0031.pxml  0032.pxml  0035.pad  0036.pxml  0038.pad  0038.pxml  0039.pxml  0041.pad  (+13 more)
